# luma-engine

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  DEVELOPMENT_GUIDE.md  Dockerfile.dev  GETTING_STARTED.md  GITHUB_READY.md  LICENSE  Makefile  PYTHON_ENV_IMPROVEMENTS.md  QUICK_START.md  README.md  TEST_RESULTS.md  TROUBLESHOOTING.md  diagnose_env.sh  docker-compose.yml  monitor_services.sh  pyproject.toml  pyproject.toml.env  quick_start.py  setup.cfg  start-demo.sh  start_dev.sh  test_api.py  test_main.py  ultra_simple.py
backend/: main.py  minimal_main.py
backend/api/: __init__.py
backend/api/v1/: __init__.py  deployments.py  iac.py  llm.py  requirements.py  security.py  system.py  templates.py
backend/core/: __init__.py  config.py  exceptions.py  minimal_config.py
backend/core/services/: deployment_service.py  template_service.py
backend/iac/generators/: __init__.py  aws.py  azure.py  base.py  gcp.py  proxmox.py
backend/iac/services/: __init__.py  generation_service.py
backend/llm/: __init__.py  agents.py  providers.py  service.py
backend/llm/prompts/: __init__.py  error_diagnosis.py  iac_generation.py  requirement_analysis.py
backend/models/schemas/: __init__.py  deployment.py  error.py  iac.py  llm.py  requirement.py  template.py
docs/: deployment.md
examples/: README.md  basic-deployment.md
infrastructure/monitoring/: prometheus.yml
infrastructure/temporal/: development-sql.yaml
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: Layout.tsx
web/src/pages/: CostOptimization.tsx  Dashboard.tsx  DeploymentMonitoring.tsx  IaCGeneration.tsx  RequirementAnalysis.tsx  SecurityCompliance.tsx  TemplateManagement.tsx  WorkflowBoard.tsx
web/src/services/: api.ts
web/src/types/: index.ts
web/src/utils/: api.ts
